--- a/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -10,6 +10,8 @@
 <h1 th:text="${course}"></h1>
 <h1 th:text="${subject}"></h1>
 <h1 th:text="${id}"></h1>
+<h1 th:text="${numbers}"></h1>
+<h1 th:text="${date}"></h1>
 
 
 
