--- a/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
+++ b/spring-09-MVC-Model/src/main/resources/templates/student/welcome.html
@@ -13,6 +13,8 @@
 <h1 th:text="${numbers}"></h1>
 <h1 th:text="${date}"></h1>
 <h1 th:text="${student}"></h1>
+<h1 th:text="${student.firstName}"></h1>
+
 
 
 
