--- a/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -10,5 +10,9 @@
 <h2 th:text="${students.get(0).firstName}"></h2>
 <h2 th:text="${students.get(0).lastName}"></h2>
 
+<!--Concatenation-->
+<h2 th:text="${ 'Hello ' + students.get(0).firstName}"></h2>
+<h2 th:text="${ students.get(0).firstName + ' ' + students.get(0).lastName}"></h2>
+
 </body>
 </html>
