--- a/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -14,5 +14,36 @@
 <h2 th:text="${ 'Hello ' + students.get(0).firstName}"></h2>
 <h2 th:text="${ students.get(0).firstName + ' ' + students.get(0).lastName}"></h2>
 
+<!--Link-->
+<h2>
+<a th:href="@{https://cydeo.com}">Cydeo Page</a>
+</h2>
+
+
+<h2>
+    <a th:href="@{/student/welcome}">Welcome</a>
+</h2>
+
+<!--Adding Parameters in Link-->
+<h2>
+    <a th:href="@{/student/welcome(id=3)}">Link</a>
+</h2>
+
+<h2>
+    <a th:href="@{/student/welcome(name=${students.get(0).firstName})}">Link</a>
+</h2>
+
+<!--Iteration-->
+<h2>Printing Students First Name</h2>
+<ul>
+    <li th:each=" student : ${students}" th:text="${student.firstName}"></li>
+</ul>
+
+<h2>Printing Students Last Name</h2>
+<ul>
+    <li th:each=" student : ${students}" th:text="${student.lastName}"></li>
+</ul>
+
+
 </body>
 </html>
