--- a/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Cydeo</title>
+
+    <link th:href="@{/css/boostrap-4.1.3-dist/css/bootstrap.css}" rel="stylesheet">
+    <link th:href="@{/css/custom.css}" rel="stylesheet">
+
 </head>
 <body>
+
+<!--Bootstrap Integration-->
+<h1 class="display-1 text-danger">Welcome to Cydeo Students Register Form</h1>
+
+<h2 class="cydeo">My Custom CSS</h2>
 
 <!--Display Value of model-->
 <h2 th:text="${students.get(0).firstName}"></h2>
