--- a/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
+++ b/sprting-10-Thymeleaf/src/main/resources/templates/student/register.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Cydeo</title>
+    <title th:text="#{index.page.title}"></title>
 
     <link th:href="@{/css/boostrap-4.1.3-dist/css/bootstrap.css}" rel="stylesheet">
     <link th:href="@{/css/custom.css}" rel="stylesheet">
