--- a/sprting-10-Thymeleaf/src/main/resources/templates/mentor/mentor-register.html
+++ b/sprting-10-Thymeleaf/src/main/resources/templates/mentor/mentor-register.html
@@ -7,7 +7,7 @@
 <body>
 <div align="center">
 
-<form th:object="${mentor}">
+<form th:action="@{/mentor/confirm}" method="post" th:object="${mentor}">
 
     <label>First Name:</label>
     <input type="text" th:field="*{firstName}"><br>
@@ -22,7 +22,7 @@
     <input type="checkbox" th:field="*{graduated}"><br>
 
     <label>Gender:</label>
-    <input type="radio" value="Male" th:field="*{gender}">Male<br>
+    <input type="radio" value="Male" th:field="*{gender}">Male
     <input type="radio" value="Female" th:field="*{gender}">Female<br>
 
     <label>Batch Number:</label>
